[gd_scene load_steps=5 format=3 uid="uid://dvi2gvgm0q47g"]

[ext_resource type="Script" path="res://HUD.gd" id="1_8587m"]
[ext_resource type="FontFile" uid="uid://dchwhrqxjaf1b" path="res://fonts/Xolonium-Regular.ttf" id="2_f5k6w"]

[sub_resource type="InputEventAction" id="InputEventAction_ql020"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_piuya"]
events = [SubResource("InputEventAction_ql020")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8587m")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_f5k6w")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_f5k6w")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 88.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_f5k6w")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_piuya")
text = "Start"

[node name="WindLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 101.0
offset_right = 20.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_f5k6w")
theme_override_font_sizes/font_size = 30
text = "North wind!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WindTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="NoClip" type="CheckButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_bottom = 28.0
grow_horizontal = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("2_f5k6w")
text = "iddqd"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="WindTimer" to="." method="_on_wind_timer_timeout"]
[connection signal="toggled" from="NoClip" to="." method="_on_no_clip_toggled"]
